<resources>
    <string name="app_name">Chat</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="login">登陆</string>
    <string name="sign">注册</string>
    <string name="user_name">用户名</string>
    <string name="phone">电话</string>
    <string name="pass_word">密码</string>
    <string name="sgin_code">邀请码</string>
    <string name="ok">好</string>
    <string name="cancel">取消</string>
    <string name="quit">退出</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="age">年龄</string>
    <string name="certain">确定</string>
    <string name="album">相册</string>
    <string name="send">发送</string>
    <string name="emoji">表情</string>
    <string name="more">更多</string>
    <string name="take_photo">相机</string>
    <string name="press_to_speak">开始录音</string>
    <string name="relase_to_finish">放手结束</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_sign">SignActivity</string>
    <string name="location">位置</string>
    <string name="parise">赞</string>
    <string name="comment">评论</string>
    <string name="hint_write">写点什么</string>
    <string name="post_article">发心情</string>
    <!--toast text-->
    <string name="toast_record_time_to_short">录音时间太短</string>
    <string name="toast_username_can_not_empty">请输入用户名</string>
    <string name="toast_pass_word_can_not_empty">请输入密码</string>
    <string name="toast_pass_word_or_user_name_error">账号已存在</string>
    <string name="toast_unable_to_speack_yourself">不能跟自己对话</string>

    <!--toast text-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_test">TestActivity</string>

    <!--list view -->
    <string name="listview_loading">加载中</string>
    <string name="listview_complete">加载完毕</string>
    <string name="listview_nomore">没有可加载的</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放更新</string>
    <string name="refresh_done">完毕</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="title_activity_animation">AnimationActivity</string>

    <string name="title_activity_comments_detail">CommentsDetailActivity</string>
    <string name="title_activity_post_article">PostArticleActivity</string>
    <!--list view -->
    <string name="build">&#xE869;</string>
    <string name="title_activity_location">LocationActivity</string>

</resources>
