<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.younchen.chat.ui.LoginActivity">

    <Button
        android:id="@id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@id/btn_sgin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:onClick="sign"
        android:text="@string/sign" />

    <EditText
        android:id="@id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/pass_word"
        android:inputType="textPassword" />

</RelativeLayout>
