<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@id/img_head"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:src="@drawable/user" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_head"
            android:hint="@string/hint_write" />

    </RelativeLayout>

    <com.younchen.chat.ui.view.LineVertical
        android:layout_width="match_parent"
        android:layout_height="1px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <com.younchen.chat.ui.components.button.IconTextButton
            android:id="@+id/btn_article"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/post_article" />

        <com.younchen.chat.ui.components.button.IconTextButton
            android:id="@+id/btn_img"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/album"
            android:gravity="center" />

        <com.younchen.chat.ui.components.button.IconTextButton
            android:id="@+id/btn_location"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/location"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>
